# purple-wolf

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  THREAT_MODEL.md  build.rs  deny.toml  release.toml
.github/workflows/: bench.yml  ci.yml  pages.yml  publish-image-aliases.yml  publish-images.yml  release.yml
benchmarks/corpora/: attacks.jsonl  benign.jsonl  build.py  load-targets.txt
benchmarks/k8s/: baseline.yaml  waf-bench.yaml
benchmarks/results/20260528-205913/: coraza-efficacy-raw.jsonl  coraza-efficacy-summary.jsonl  coraza-load.jsonl  coraza-resources.csv  purple-wolf-efficacy-raw.jsonl  purple-wolf-efficacy-summary.jsonl  purple-wolf-load.jsonl  purple-wolf-resources.csv
benchmarks/runner/: efficacy.py  load.py  run-all.sh
benchmarks/runner/round2/: build-extended-corpus.py  robustness.sh  run-all-round2.sh  runeff.sh
charts/purple-wolf/: Chart.yaml  values.enforce.yaml  values.hardened.yaml  values.monitor.yaml  values.schema.json  values.yaml
charts/purple-wolf/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  middleware-enforce.yaml  middleware-monitor.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
config/: purple-wolf.toml
crates/purple-wolf-core/: Cargo.toml  build.rs
crates/purple-wolf-core/benches/: pipeline.rs
crates/purple-wolf-core/src/: audit.rs  clock.rs  config.rs  ffi.rs  lib.rs  policy.rs  request.rs
crates/purple-wolf-core/src/detectors/: injection.rs  mod.rs  reputation.rs  signatures.rs  structural.rs
crates/purple-wolf-core/tests/: crs_replay.rs  properties.rs
crates/purple-wolf-relay/: Cargo.toml  Dockerfile  README.md
crates/purple-wolf-relay/benches/: parser.rs
crates/purple-wolf-relay/examples/: config.full.yaml  config.minimal.yaml
crates/purple-wolf-relay/examples/subscribers/: go.go  python.py  typescript.ts
crates/purple-wolf-relay/src/: admin.rs  config.rs  envelope.rs  lib.rs  main.rs  metrics.rs  parser.rs  pipeline.rs  signer.rs
crates/purple-wolf-relay/src/enrichers/: http.rs  lookup.rs  mod.rs
crates/purple-wolf-relay/src/sources/: log_tail.rs  mod.rs  stdin.rs
crates/purple-wolf-relay/src/subscribers/: dlq.rs  filter.rs  http.rs  mod.rs  retry.rs
crates/purple-wolf-relay/tests/: integration.rs  properties.rs
crates/purple-wolf-traefik/: Cargo.toml  Dockerfile.wasm
crates/purple-wolf-traefik/src/: config.rs  entry.rs  host.rs  lib.rs
deploy/: Dockerfile  sidecar-example.yaml
deploy/kubernetes/base/: kustomization.yaml  middleware-enforce.yaml  middleware-monitor.yaml  namespace.yaml  relay-configmap.yaml  relay-deployment.yaml  relay-pdb.yaml  relay-service.yaml
deploy/kubernetes/overlays/enforce-mode/: kustomization.yaml
deploy/kubernetes/overlays/hardened/: kustomization.yaml  networkpolicy.yaml  pdb-min-available.yaml  relay-resources.yaml  servicemonitor.yaml
deploy/kubernetes/overlays/monitor-mode/: kustomization.yaml
deploy/kubernetes/overlays/relay-only/: delete-enforce.yaml  delete-monitor.yaml  kustomization.yaml
docs/: benchmark.md  configuration.md  helm.md  homelab-test.md  kubernetes-production.md  operations.md  release-verification.md  webhook-protocol.md
docs/plans/: 2026-05-25-v0.3-labels-and-relay.md
docs/superpowers/plans/: 2026-05-22-purple-wolf-waf.md  2026-05-24-purple-wolf-v0.2.md  2026-06-06-github-pages-launch-site.md  2026-06-09-robustness-and-detection-hardening.md
docs/superpowers/specs/: 2026-05-22-purple-wolf-waf-design.md  2026-05-24-purple-wolf-v0.2-design.md  2026-06-06-github-pages-launch-site-design.md
examples/: middleware-monitor.yaml  middleware-routes.yaml  middleware-strict.yaml
examples/demo/: Dockerfile.wasm-builder  README.md  docker-compose.yml  plugin.traefik.yml  relay.yaml  subscriber.py
examples/demo/traefik/: dynamic.yml  traefik.yml
examples/relay/: compose-relay.yaml  docker-compose.full.yml
examples/relay/k8s/: configmap.yaml  deployment.yaml  homelab-test.yaml  secret.yaml
fuzz/: Cargo.toml
fuzz/corpus/client_ip/: seed-0
fuzz/corpus/relay_parser/: seed-0
fuzz/corpus/request_parser/: seed-0
fuzz/fuzz_targets/: client_ip.rs  injection_inspect.rs  policy_decide.rs  relay_parser.rs  request_parser.rs  signatures_inspect.rs
site/: check-links.mjs  index.html  script.js  styles.css
site/logos/: generate.mjs  manifest.json
src/: config.rs  ffi.rs  main.rs  observe.rs  policy.rs  proxy.rs  request_model.rs  rules.rs
src/detectors/: injection.rs  mod.rs  reputation.rs  signatures.rs  structural.rs
tests/: integration.rs
tests/corpus/clean/: clean.txt
tests/relay_integration/: Cargo.toml  docker-compose.yml
tests/relay_integration/plugin/: .traefik.yml
tests/relay_integration/relay/: relay.yaml
tests/relay_integration/subscriber/: subscriber.py
tests/relay_integration/tests/: end_to_end.rs
tests/relay_integration/traefik/: dynamic.yml  traefik.yml
tests/traefik_integration/: Cargo.toml  docker-compose.yml  homelab.yaml  upstream.py
tests/traefik_integration/plugin/: .traefik.yml
tests/traefik_integration/src/: lib.rs
tests/traefik_integration/tests/: end_to_end.rs
tests/traefik_integration/traefik/: dynamic.yml  traefik.yml
