[workspace]
resolver = "2"
members = [
    "crates/purple-wolf-core",
    "crates/purple-wolf-relay",
    "crates/purple-wolf-traefik",
]
exclude = ["fuzz", "tests/relay_integration", "tests/traefik_integration"]

[workspace.package]
version = "0.3.0"
edition = "2021"
# v0.3 bumps MSRV from 1.75 to 1.88. The relay's dep tree pulls in
# icu_* / idna (via reqwest's URL stack) which require 1.86, and
# wiremock 0.6.5 (a dev-dep) uses let-chains which only stabilized
# in 1.88. 1.88 is the floor that resolves cleanly across runtime
# AND test compiles.
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/guaracloud/purple-wolf"
homepage   = "https://github.com/guaracloud/purple-wolf"
readme = "README.md"

[workspace.dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
aho-corasick = "1"
percent-encoding = "2"
# Workspace-level path+version pin for the core crate. Member
# manifests reference this via `purple-wolf-core.workspace = true`,
# so a `cargo release` bump propagates atomically.
purple-wolf-core = { path = "crates/purple-wolf-core", version = "0.3.0" }

# Size-optimised release for the WASM plugin artifact.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
# panic = "unwind" (default) is kept on purpose: the entry shim uses
# catch_unwind for per-request panic isolation (spec section 7).
