[workspace]
resolver = "2"
members = [
    "crates/purple-wolf-core",
    "crates/purple-wolf-relay",
    "crates/purple-wolf-traefik",
]
exclude = ["fuzz", "tests/relay_integration", "tests/traefik_integration"]

[workspace.package]
version = "0.3.0"
edition = "2021"
# v0.3 bumps MSRV from 1.75 to 1.88. The relay's dep tree pulls in
# icu_* / idna (via reqwest's URL stack) which require 1.86, and
# wiremock 0.6.5 (a dev-dep) uses let-chains which only stabilized
# in 1.88. 1.88 is the floor that resolves cleanly across runtime
# AND test compiles.
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/guaracloud/purple-wolf"
homepage   = "https://github.com/guaracloud/purple-wolf"
readme = "README.md"

[workspace.dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
aho-corasick = "1"
percent-encoding = "2"
# Workspace-level path+version pin for the core crate. Member
# manifests reference this via `purple-wolf-core.workspace = true`,
# so a `cargo release` bump propagates atomically.
purple-wolf-core = { path = "crates/purple-wolf-core", version = "0.3.0" }

# Size-optimised release for the WASM plugin artifact.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
# NOTE: `wasm32-wasip1` is `panic = "abort"` on stable Rust — unwinding is
# unavailable there regardless of this profile, so the entry shim's
# `catch_unwind` CANNOT intercept a detector panic in the shipped guest: a
# panic traps the whole Wasm instance and Traefik applies its plugin-failure
# path, *bypassing* the configured `failMode`. We therefore do not rely on
# unwinding for safety. Panics are instead structurally excluded from
# production code by the `deny(clippy::unwrap_used / expect_used / panic)`
# lints in each crate's `lib.rs`, and the fuzz targets exist to surface any
# remaining panic path. The `catch_unwind` in the shim is retained only as a
# belt-and-braces guard for native (non-wasm) embeddings, where unwinding
# does work. See THREAT_MODEL.md §4.3.
