[package]
name        = "purple-wolf-core"
description = "WAF detection engine: hybrid SQLi/XSS, signature, structural, and reputation detectors."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
publish     = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
aho-corasick = { workspace = true }
percent-encoding = { workspace = true }
toml       = "0.8"
# governor was removed in v0.2 (NEW-H2) — its DashMap-backed keyed store
# is unbounded, and on wasm32 it pulls a large futures stack we don't need.
# Replaced by a tiny in-crate bounded LRU token bucket in
# crates/purple-wolf-core/src/detectors/reputation.rs.

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
proptest = "1"
walkdir = "2"

[[bench]]
name = "pipeline"
harness = false

[build-dependencies]
cc = "1"
