[package]
name        = "purple-wolf-relay"
description = "Webhook fan-out relay for purple-wolf WAF audit events."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
readme                 = "README.md"

[[bin]]
name = "purple-wolf-relay"
path = "src/main.rs"

[dependencies]
purple-wolf-core   = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
serde_yaml         = "0.9"
percent-encoding   = { workspace = true }
tokio              = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "fs", "io-util", "io-std", "sync", "process", "net"] }
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
hyper              = { version = "1", features = ["server", "http1"] }
hyper-util         = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util     = "0.1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap               = { version = "4", features = ["derive", "env"] }
prometheus         = { version = "0.13", default-features = false }
hmac               = "0.12"
sha2               = "0.10"
hex                = "0.4"
zeroize            = { version = "1", features = ["derive"] }
ulid               = { version = "1", features = ["serde"] }
notify             = { version = "6", default-features = false, features = ["macos_fsevent"] }
chrono             = { version = "0.4", features = ["serde"] }
bytes              = "1"
async-trait        = "0.1"
thiserror          = "1"
anyhow             = "1"
rand               = "0.8"
gethostname        = "0.4"

[dev-dependencies]
tokio    = { version = "1", features = ["test-util", "macros", "rt-multi-thread", "io-util", "sync", "time", "process"] }
wiremock = "0.6"
proptest = "1"
tempfile = "3"
hex      = "0.4"
hmac     = "0.12"
sha2     = "0.10"
