[package]
name        = "purple-wolf-traefik"
description = "purple-wolf as a Traefik http-wasm plugin."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
publish     = false

[lib]
crate-type = ["cdylib"]

[dependencies]
purple-wolf-core = { path = "../purple-wolf-core" }
serde      = { workspace = true }
serde_json = { workspace = true }
