[package]
name        = "purple-wolf-traefik"
description = "purple-wolf as a Traefik http-wasm plugin."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
publish     = false

[lib]
# `cdylib` for the wasm guest export table; `rlib` so the native
# `purple-wolf-validate` binary can link the config adapter.
crate-type = ["cdylib", "rlib"]

# Offline config validator for operator CI (native only; never built for wasm).
[[bin]]
name = "purple-wolf-validate"
path = "src/bin/validate.rs"

[dependencies]
purple-wolf-core = { workspace = true, default-features = false }
serde      = { workspace = true }
serde_json = { workspace = true }
